# bitcoin2clickhouse

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  README_clickhouse.md  bitcoin2clickhouse-bulk_load.py  bitcoin2clickhouse-daemon.py  bitcoin2clickhouse.service  bitcoin_parser_example.py  env.example  pyproject.toml  requirements.txt  setup.py
src/: bitcoin2clickhouse-bulk_load.py  bitcoin2clickhouse-daemon.py  check_database.py
src/bitcoin2clickhouse/: __init__.py  bitcoin2clickhouse.py  check_database.py  clickhouse_schema.sql
tests/: test_load.py
